# nldi-crawler

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CrawlerData_13_y1f3oknj.geojson  Dockerfile  Dockerfile-pleep  Jenkinsfile  LICENSE  README.md  RUNNING.md  buildJenkinsfile  codecov.yml  deployJenkinsfile  docker-compose.yml  nldi-crawler.toml  noxfile.py  pipeline.yml  pom.xml  pyproject.toml  secrets.env.sample
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: maven-tests.yml  spotless.yml
docker/: Dockerfile  Dockerfile:CHS  Dockerfile:ORIG  Dockerfile_CHS  Dockerfile_ORIG
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  conf.py  index.rst  reference.rst  source_table.md  usage.md  workflow.md  workflow.rst
notebooks/: ORM.ipynb  fetch_data.ipynb  get_db_schema.ipynb  get_source_data.ipynb  logging.ipynb  parse_json.ipynb  schema_info.txt  schema_info_test.txt  select_source_by_id.ipynb  sources_info.txt  tables.ipynb  toml_config.ipynb
src/main/resources/: application.yml  logback.xml
src/main/resources/mybatis/: mybatisConfig.xml
src/main/resources/mybatis/mappers/: crawlerSource.xml  feature.xml  ingest.xml
src/nldi_crawler/: __init__.py  cli.py  config.py  db.py  feature.py  features.py  ingestor.py  source.py  sources.py  src.py
src/test/resources/: logback.xml  test.properties
src/test/resources/cleanup/: emptyWqpTemp.xml  featureNp21NwisTemp.xml  featureNwisTemp.xml  featureTables.xml  featureWqpTemp.xml
src/test/resources/cleanup/sqlinjection/: tempTable.xml
src/test/resources/testData/: crawlerSource.xml  featureWqpTemp.xml  ingestorDbIntegration.xml  np21Nwis.geojson  singleFeatureNwis.geojson  singleFeatureTopLevelId.geojson  singleFeatureWqp.geojson  wqp.geojson
src/test/resources/testResult/: featureWqpTemp.xml  featureWqpTempLinkCatchment.xml  featureWqpTempLinkPoint.xml  featureWqpTempLinkReachMeasure.xml  featureWqpTempNullPoint.xml  ingestorDbIntegration.xml  ingestorPointDbIntegration.xml  ingestorReachDbIntegration.xml
tests/: _test_ingestor.py  cfg-test-1.toml  cfg-test-2.toml  conftest.py  sources.json  test_cli.py  test_core.py  test_db.py  test_ingestor.py  test_network.py  test_repopattern.py  test_smoke.py  test_source.py  test_sourcetable.py
(+68 files in other folders)
