[tool.poetry]
name = "nldi-crawler"
version = "0.1.0"
description = ""
authors = ["g.trantham <gtrantham@contractor.usgs.gov>"]
readme = "README.md"
packages = [{include = "nldi_crawler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
mypy = "^0.991"
sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.5"
ipykernel = "^6.19.2"
pylint = "^2.15.8"
myst-parser = "^0.18.1"
ghp-import = "^2.1.0"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-mermaid = "^0.7.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nldi_crawler"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100