[tool.poetry]
name = "nldi-crawler"
version = "0.1.0"
description = ""
authors = ["g.trantham <gtrantham@contractor.usgs.gov>"]
readme = "README.md"
packages = [{include = "nldi_crawler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
# sqlalchemy = "^1.4.45"
sqlalchemy = {version = "2.0.0b1", allow-prereleases = true}
psycopg2-binary = "^2.9.5"
pandas = "^1.5.2"
httpx = "^0.23.1"
ijson = "^3.1.4"
geoalchemy2 = "^0.12.5"
shapely = "^2.0.0"
psycopg = "^3.1.7"
psycopg-binary = "^3.1.8"

[tool.poetry.scripts]
nldi-cli = "nldi_crawler.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
black = "^22.12.0"
pylint = "^2.15.8"
mypy = "^0.991"
sphinx = "^5.3.0"
myst-parser = "^0.18.1"
sphinx-autodoc-typehints = "^1.19.5"
ghp-import = "^2.1.0"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-mermaid = "^0.7.1"
ipykernel = "^6.19.2"
pytest-postgresql = "^4.1.1"
pytest-httpx = "^0.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nldi_crawler"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
